--- a/chrome-app/manifest.json
+++ b/chrome-app/manifest.json
@@ -2,14 +2,19 @@
   "manifest_version": 2,
   "name": "Boustrophedon",
   "description": "Boustrophedon in your browser.",
-  "version": "0.2",
+  "version": "0.32",
   "content_scripts": [{
-    "matches": ["http://*/*"],
+    "matches": ["*://*/*"],
     "js": ["jquery-2.1.0.min.js", "boustrophedon.js"],
     "css": ["boustrophedon.css"]
   }],
   "browser_action": {
     "default_icon": "calculator-16.png"
+  },
+  "applications": {
+    "gecko": {
+      "id": "boustrophedon@tdcb.me"
+    }
   },
   "icons": { "16": "calculator-16.png", "128": "calculator-128.png" }
 }
